--- a/server/index.html
+++ b/server/index.html
@@ -44,25 +44,25 @@
 
             if (m.cmd == 'pause') {
 
-              alert('pause:'+m.val);
+              R.player.pause();
 
             }
 
             if (m.cmd == 'play'){
 
-              alert('play:'+m.val);
+              R.player.play();
 
             }
 
             if (m.cmd == 'next'){
 
-              alert('next:'+m.val);
+              R.player.next();
 
             }
 
             if (m.cmd == 'prev'){
 
-              alert('prev:'+m.val);
+              R.player.previous();
 
             }
 
