Updated server files

--- a/server/index.html
+++ b/server/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet/less" type="text/css" href="style/main.less">
 
     <!-- Register your app at http://www.rdio.com/developers/create/ and replace client_id below with yours  -->
-    <script src="https://www.rdio.com/api/api.js?client_id=w4PJ2lyFcEVOEMQG7XtWLQ"></script>
+    <script src="https://www.rdio.com/api/api.js?client_id=qu2nUg8KkGM4AiXxuePmgw"></script>
 
     <script src="lib/jquery-1.9.1.min.js"></script>
     <script src="lib/underscore-1.4.4.min.js"></script>
@@ -85,7 +85,13 @@
                           success: function(response) {
                             if(response.status == 'ok'){
                                 var top = response.result.results[0];
-                                alert(top.name + " by " + top.artist);
+                                //R.player.queue.on("add", function(model, collection, info) {
+                                //  console.log("source " + model.get("key") + " added to queue at " + info.index);
+                                //});
+                                R.player.queue.add(top.key);
+                                alert(top.name + " by " + top.artist + ' - successfully added to the queue');
+                                
+
                           }
                           },
                           error: function(response) {
