--- a/server/index.html
+++ b/server/index.html
@@ -4,9 +4,10 @@
     <title>Now Playing</title>
     <meta name="viewport" content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="stylesheet" type="text/css" href="lib/normalize.css">
-    <link rel="stylesheet" type="text/css" href="lib/rdio-utils/rdio-utils.css">
-    <link rel="stylesheet/less" type="text/css" href="style/main.less">
+    <link rel="stylesheet" type="text/css" href="lib/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="lib/jquery.growl.css" />
+    <link rel="stylesheet" type="text/css" href="lib/rdio-utils/rdio-utils.css" />
+    <link rel="stylesheet/less" type="text/css" href="style/main.less" />
 
     <!-- Register your app at http://www.rdio.com/developers/create/ and replace client_id below with yours  -->
     <script src="https://www.rdio.com/api/api.js?client_id=w4PJ2lyFcEVOEMQG7XtWLQ"></script>
@@ -16,6 +17,7 @@
     <script src="lib/spin.min.js"></script>
     <script src="lib/less-1.3.0.min.js"></script>
     <script src="lib/rdio-utils/rdio-utils.js"></script>
+    <script src="lib/jquery.growl.js"></script>
     <script src="js/main.js"></script>
     <script src="js/unauthenticated-view.js"></script>
     <script src="js/pictures-view.js"></script>
@@ -89,10 +91,8 @@
                                 //  console.log("source " + model.get("key") + " added to queue at " + info.index);
                                 //});
                                 R.player.queue.add(top.key);
-                                alert(top.name + " by " + top.artist + ' - successfully added to the queue');
-                                
-
-                          }
+                                $.growl({ title: top.name + " by " + top.artist, message: "Successfully added to the queue" });
+                          	}
                           },
                           error: function(response) {
                             console.log("error: " + response.message);
