--- a/server/index.html
+++ b/server/index.html
@@ -33,8 +33,8 @@
       <div class="picture"></div>
       <div class="info">
         <div class="artist"></div>
-        <div class="album"></div>
         <div class="track"></div>
+        <div class="album"></div>
       </div>
       <div class="yes btn"></div>
       <div class="no btn" title="Skip to next source"></div>
@@ -80,7 +80,7 @@
                           method: "search",
                           content: {
                             query: m.val,
-                            types: "Track",
+                            types: "Artist,Track",
                             start: 0,
                             count: 1
                           },
@@ -107,7 +107,7 @@
              publish_key   : 'pub-c-f1c6575f-d2d3-4cd1-bb38-2492c50b7d0e',
              subscribe_key : 'sub-c-e877ab56-de0c-11e3-8c07-02ee2ddab7fe'
          })
-     
+
          pubnub.subscribe({
              channel : "hello_world",
              message : function(m){ parse_message(m) },
